# SalesHubAPI

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  saleshub-api.dockerfile
alembic/: env.py
alembic/versions/: 23713b288fe3_initial_migration.py  974b531cfe41_first_migration.py  e5f57a6427af_.py
saleshubapi/: __init__.py
saleshubapi/api/: deps.py
saleshubapi/api/api_v1/: api.py
saleshubapi/api/api_v1/endpoints/: advertisement.py  hello.py
saleshubapi/db/: base.py  base_class.py  session.py
saleshubapi/models/: advertisement.py
saleshubapi/schemas/: advertisement.py
