[tool.poetry]
name = "saleshubapi"
version = "0.1.0"
description = ""
authors = ["Rey Halsall <reyeduardohalsallquintero8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
sqlalchemy = "^2.0.20"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
