[tool.poetry]
name = "saleshubapi"
version = "0.1.0"
description = ""
authors = ["Rey Halsall <reyeduardohalsallquintero8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
flask-smorest = "^0.42.1"
marshmallow = "^3.20.1"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
